tests/positive/Isabelle/M/N.juvix
module M.N;

import Stdlib.Prelude open;

g (a : Nat) : Nat := a + 1;
